# gandalf-the-gray

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
gandalf/: chat.py  chunker.py  embeddings.py  hello.py  helper.py  indexer.py  ollama_client.py  pdf_loader.py  settings.py  vector_repository.py
