[project]
name = "gandalf-the-gray"
version = "0.1.0"
description = "The one who knows!"
authors = [
    {name = "Rafael Emery",email = "rafael.emerycade@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "pypdf2 (>=3.0.1,<4.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "chromadb (>=1.3.4,<2.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "rich (>=14.2.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.5,<0.15.0)"
]
